--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.android.databinding'
 apply plugin: 'me.tatarka.retrolambda'
+
 android {
-    compileSdkVersion 21
-    //buildToolsVersion "20.0.0"
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "23.0.0 rc3"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -17,7 +18,7 @@ android {
     defaultConfig {
         applicationId "tasty.frenchdonuts.motivate"
         minSdkVersion 15
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -32,12 +33,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'io.realm:realm-android:0.76.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'io.realm:realm-android:0.77.0'
     compile 'io.reactivex:rxjava:1.0.4'
     compile 'io.reactivex:rxandroid:0.24.0'
     compile 'com.jakewharton:butterknife:6.0.0'
-    compile 'uk.co.chrisjenx:calligraphy:2.0.0-SNAPSHOT'
+    compile 'uk.co.chrisjenx:calligraphy:2.0.0'
     compile 'com.getbase:floatingactionbutton:1.5.1'
     compile 'com.rengwuxian.materialedittext:library:1.8.0'
 }
