--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0'
-        classpath 'me.tatarka:gradle-retrolambda:2.5.0'
+        classpath "com.android.tools.build:gradle:1.3.0-beta4"
+        classpath "com.android.databinding:dataBinder:1.0-rc1"
+        classpath 'me.tatarka:gradle-retrolambda:3.2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,6 +17,5 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
