--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+
+    compile 'org.functionaljava:functionaljava:4.4'
+
     compile 'io.realm:realm-android:0.77.0'
+
     compile 'io.reactivex:rxjava:1.0.4'
-    compile 'io.reactivex:rxandroid:0.24.0'
+    compile 'io.reactivex:rxandroid:0.25.0'
+
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'uk.co.chrisjenx:calligraphy:2.0.0'
     compile 'com.getbase:floatingactionbutton:1.5.1'
