--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.android.databinding'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 22
@@ -16,7 +16,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "tasty.frenchdonuts.motivate"
+        applicationId "tasty.frenchdonuts.pavlov"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
@@ -35,11 +35,21 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
 
+    compile 'com.github.frankiesardo:auto-parcel:0.3'
+    apt 'com.github.frankiesardo:auto-parcel-processor:0.3'
+   // compile 'com.google.auto.value:auto-value:1.1'
+
+    // Dependency injection
+    apt 'com.google.dagger:dagger-compiler:2.0.1'
+    compile 'com.google.dagger:dagger:2.0.1'
+
+
     compile 'org.functionaljava:functionaljava:4.4'
 
-    compile 'io.realm:realm-android:0.77.0'
+    compile 'io.realm:realm-android:0.82.0'
 
     compile 'io.reactivex:rxjava:1.0.4'
+    compile 'io.reactivex:rxjava-async-util:0.21.0'
     compile 'io.reactivex:rxandroid:0.25.0'
 
     compile 'com.jakewharton:butterknife:6.0.0'
