--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="tasty.frenchdonuts.motivate" >
+    package="tasty.frenchdonuts.pavlov" >
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:name=".Pavlov">
+        android:name=".PavlovApp">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
