--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:+"
+        classpath "com.android.tools.build:gradle:1.3.1"
         classpath 'me.tatarka:gradle-retrolambda:3.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.6'
 
