--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,11 +34,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:23.0.1'
-//    compile 'com.android.support:appcompat-v7:21.0.3'
-
-    compile 'com.github.frankiesardo:auto-parcel:0.3'
-    apt 'com.github.frankiesardo:auto-parcel-processor:0.3'
-   // compile 'com.google.auto.value:auto-value:1.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
 
     // Dependency injection
     apt 'com.google.dagger:dagger-compiler:2.0.1'
@@ -47,13 +43,15 @@ dependencies {
 
     compile 'org.functionaljava:functionaljava:4.4'
 
-    compile 'io.realm:realm-android:0.82.0'
+    compile 'com.pushtorefresh.storio:sqlite:1.4.0'
+    compile 'com.pushtorefresh.storio:sqlite-annotations:1.4.0'
+    apt 'com.pushtorefresh.storio:sqlite-annotations-processor:1.4.0'
 
     compile 'io.reactivex:rxjava:1.0.4'
     compile 'io.reactivex:rxjava-async-util:0.21.0'
     compile 'io.reactivex:rxandroid:0.25.0'
 
-    compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'uk.co.chrisjenx:calligraphy:2.0.0'
     compile 'com.getbase:floatingactionbutton:1.5.1'
     compile 'com.rengwuxian.materialedittext:library:1.8.0'
